[gd_scene load_steps=6 format=3 uid="uid://dfidqnpw7hgp8"]

[ext_resource type="Script" uid="uid://djs8vfc40uiqp" path="res://Components/GraphBoards/board.gd" id="1_2jgq7"]
[ext_resource type="Texture2D" uid="uid://clxsnr4if2qcq" path="res://Assets/edit_normal.png" id="2_jsc4h"]
[ext_resource type="Script" uid="uid://b4iqc3pvghuc" path="res://Components/GraphBoards/line_graph.gd" id="2_lpp80"]
[ext_resource type="Texture2D" uid="uid://dxad7q460flo8" path="res://Assets/edit_pressed.png" id="3_3bu43"]
[ext_resource type="Script" uid="uid://mxx0qdb4twe2" path="res://Components/GraphBoards/table.gd" id="3_lpp80"]

[node name="Board" type="Panel"]
custom_minimum_size = Vector2(672, 504)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -48.0
offset_bottom = -776.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jgq7")

[node name="AddTransactionBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "New"

[node name="EditGraphBtn" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -644.0
offset_top = 24.0
offset_right = -612.0
offset_bottom = 56.0
grow_horizontal = 0
texture_normal = ExtResource("2_jsc4h")
texture_pressed = ExtResource("3_3bu43")

[node name="ViewBtn" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -252.0
offset_top = 16.0
offset_right = -140.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "View"

[node name="GraphLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 20.0
offset_right = 299.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "Untitled Graph"
vertical_alignment = 1

[node name="LineGraph" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 80.0
offset_right = 312.0
offset_bottom = 439.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_lpp80")

[node name="ColorRect" type="ColorRect" parent="LineGraph"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0781564, 0.0781564, 0.0781564, 1)
metadata/_edit_lock_ = true

[node name="Y-axis" type="VBoxContainer" parent="LineGraph"]
layout_mode = 2
offset_left = 8.0
offset_top = 12.0
offset_right = 8.0
offset_bottom = 12.0
theme_override_constants/separation = 40

[node name="ScrollContainer" type="ScrollContainer" parent="LineGraph"]
layout_mode = 2
offset_left = 76.0
offset_top = 12.0
offset_right = 608.0
offset_bottom = 12.0
size_flags_horizontal = 3
mouse_filter = 0
draw_focus_border = true
horizontal_scroll_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="LineGraph/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
dragging_enabled = false

[node name="Table" type="Control" parent="LineGraph/ScrollContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_lpp80")

[node name="Background" type="ColorRect" parent="LineGraph/ScrollContainer/VSplitContainer/Table"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.112106, 0, 1)

[node name="X" type="ColorRect" parent="LineGraph/ScrollContainer/VSplitContainer/Table"]
visible = false
custom_minimum_size = Vector2(2, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Y" type="ColorRect" parent="LineGraph/ScrollContainer/VSplitContainer/Table"]
visible = false
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="X-axis" type="HBoxContainer" parent="LineGraph/ScrollContainer/VSplitContainer"]
clip_contents = true
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 16
alignment = 1

[node name="CandleStickGraph" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_top = 164.0
offset_bottom = 164.0

[node name="B" type="Panel" parent="CandleStickGraph"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="1" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 32.0
color = Color(1.39579e-06, 0.787413, 0.118876, 1)

[node name="2" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 60.0
offset_right = 68.0
offset_bottom = 32.0
color = Color(1.39579e-06, 0.787413, 0.118876, 1)

[node name="4" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 12.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 32.0
color = Color(1.39579e-06, 0.787413, 0.118876, 1)

[node name="5" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 36.0
offset_top = 24.0
offset_right = 44.0
offset_bottom = 32.0
color = Color(1.39579e-06, 0.787413, 0.118876, 1)

[node name="6" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 32.0
color = Color(1.39579e-06, 0.787413, 0.118876, 1)

[node name="7" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 24.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 48.0
color = Color(0.805373, 0.000107476, 0.112056, 1)

[node name="8" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 72.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 48.0
color = Color(0.805373, 0.000107476, 0.112056, 1)

[node name="9" type="ColorRect" parent="CandleStickGraph"]
layout_mode = 0
offset_left = 84.0
offset_top = 32.0
offset_right = 92.0
offset_bottom = 64.0
color = Color(0.805373, 0.000107476, 0.112056, 1)

[node name="EditGraph" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="EditGraph"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.764706)
metadata/_edit_lock_ = true

[node name="LineEdit" type="LineEdit" parent="EditGraph"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -52.0
offset_right = 144.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "[Enter Graph Title]"
alignment = 1

[node name="CancelBtn" type="Button" parent="EditGraph"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -460.0
offset_top = 268.0
offset_right = -348.0
offset_bottom = 316.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Cancel"

[node name="SaveBtn" type="Button" parent="EditGraph"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 268.0
offset_right = -208.0
offset_bottom = 316.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Save"

[connection signal="pressed" from="AddTransactionBtn" to="." method="_on_add_transaction_btn_pressed"]
[connection signal="pressed" from="EditGraphBtn" to="." method="_on_edit_graph_btn_pressed"]
[connection signal="pressed" from="ViewBtn" to="." method="_on_view_btn_pressed"]
[connection signal="visibility_changed" from="EditGraph" to="." method="_on_edit_graph_visibility_changed"]
[connection signal="pressed" from="EditGraph/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="pressed" from="EditGraph/SaveBtn" to="." method="_on_save_btn_pressed"]
